<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_form_grid"
        android:title="@string/action_form_grid" />
    <item android:id="@+id/action_form_linear"
        android:title="@string/action_form_linear" />
    <item android:id="@+id/action_form_relative"
        android:title="@string/action_form_relative" />
    <item android:id="@+id/action_form_table"
        android:title="@string/action_form_table" />


    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
