<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView android:text="@string/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_below="@+id/tvTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDate"
        android:id="@+id/tvDate"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerMonth"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMonth"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/spinnerMonth"
        android:layout_toRightOf="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/spinnerMonth" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDay"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDay"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/spinnerDay"
        android:layout_toRightOf="@+id/spinnerDay"
        android:layout_toEndOf="@+id/spinnerDay" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerMonth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbSolar"
            android:id="@+id/rbSolar"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbLunar"
            android:id="@+id/rbLunar" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancel"
        android:id="@+id/btCancel"
        android:layout_toLeftOf="@+id/btConfirm"
        android:layout_toStartOf="@+id/btConfirm"
        android:layout_below="@+id/radioGroup" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btConfirm"
        android:id="@+id/btConfirm"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup" />


</RelativeLayout>
