<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_below="@+id/tvTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btConfirm"
        android:id="@+id/btConfirm"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancel"
        android:layout_toLeftOf="@+id/btConfirm"
        android:layout_alignTop="@+id/btConfirm" />

</RelativeLayout>
